# NumericalSolvingPDEs

./: README.md  compile-2.6.1.sh  project-2.6.1.sh
adaptive/: CMakeLists.txt  README.md  adaptive.pc.in  config.h.cmake  dune.module
fd-elliptic-1d/: CMakeLists.txt  README.md  config.h.cmake  dune.module  fd-elliptic-1d.pc.in
fd-par-1d/: CMakeLists.txt  README.md  config.h.cmake  dune.module  fd-par-1d.pc.in
fem/: CMakeLists.txt  README.md  config.h.cmake  dune.module  fem.pc.in
fvm-advection-2D/: CMakeLists.txt  README.md  config.h.cmake  dune.module  fvm-advection-2D.pc.in
fvm-advection-2D/src/: CMakeLists.txt  data.hh  evolve.hh  fvm.cc  fvm.input  initialize.hh  rectangle.dgf
fvm-diffusion-2D/: CMakeLists.txt  README.md  config.h.cmake  dune.module  fvm-diffusion-2D.pc.in
integracija/: CMakeLists.txt  config.h.cmake  dune.module  integracija.pc.in
interpolacija/: CMakeLists.txt  README.md  config.h.cmake  dune.module  interpolacija.pc.in
konstrukcija/: CMakeLists.txt  config.h.cmake  dune.module  konstrukcija.pc.in
lin-elasticity/: CMakeLists.txt  README.md  config.h.cmake  dune.module  lin-elasticity.pc.in
min-max/: CMakeLists.txt  CMakeLists.txt.user.909a09d  CMakeLists.txt.user.df7f63b  README.md  config.h.cmake  dune.module  min-max.pc.in
min-surface/: CMakeLists.txt  README.md  config.h.cmake  dune.module  min-surface.pc.in
min-surface/src/: CMakeLists.txt  bctype.hh  driver.hh  driver_simple_iter.hh  l2norm.hh  min-surface.cc  nlin.ini  operator.hh  operator_simple_iter.hh
ortogonalnost/: CMakeLists.txt  README.md  config.h.cmake  (+2 more)
(+140 files in other folders)
